# pkg/router/manifest.go
@@ -1,15 +1,0 @@
-package router
-
-import (
-	"github.com/bsonger/devflow-release-service/pkg/api"
-	"github.com/gin-gonic/gin"
-)
-
-func RegisterManifestRoutes(rg *gin.RouterGroup) {
-	manifest := rg.Group("/manifests")
-
-	manifest.GET("", api.ManifestRouteApi.List)
-	manifest.GET("/:id", api.ManifestRouteApi.Get)
-	manifest.POST("", api.ManifestRouteApi.Create)
-	manifest.PATCH("/:id", api.ManifestRouteApi.Patch)
-}
